b-fix global nav z-index.

--- a/src/scss/_navigation.scss
+++ b/src/scss/_navigation.scss
@@ -10,6 +10,8 @@
   @include container-shadow;
   @include transition-ease;
 
+  z-index: 2;
+
   &__button {
     position: absolute;
     top: 2.25rem;
